--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h1>Trace real packets 🌍</h1>
     <p>Type a domain or IP and watch a live traceroute plus the geolocation of each hop.</p>
     <p id="clientInfo" class="client-info">Detecting your public IP and location…</p>
+    <p id="apiTarget" class="client-info"></p>
   </header>
 
   <main>
